--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -22,6 +22,7 @@
     "@helia/strings": "^4.0.1",
     "@helia/unixfs": "^1.0.0",
     "helia": "^5.1.1",
+    "kubo-rpc-client": "^5.0.2",
     "multiformats": "^13.3.1"
   },
   "devDependencies": {
