--- a/packages/ipfs-cluster-peer/init.docker-compose.yml
+++ b/packages/ipfs-cluster-peer/init.docker-compose.yml
@@ -4,9 +4,15 @@ services:
     image: ipfs/ipfs-cluster:v1.1.2
     environment:
       CLUSTER_PEERNAME: ${PEERNAME}
+      CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs/tcp/5001 # connect to the ipfs node
+      CLUSTER_IPFSHTTP_HTTPLISTENMULTIADDRESS: /ip4/ipfs/tcp/5001 # Expose API
+      CLUSTER_IPFSPROXY_NODEMULTIADDRESS: /dns4/ipfs/tcp/5001 # Make IPFS Proxy work
+      CLUSTER_IPFSPROXY_LISTENMULTIADDRESS: /ip4/0.0.0.0/tcp/9095 # Expose IPFS Proxy API
+      CLUSTER_RESTAPI_HTTPLISTENMULTIADDRESS: /ip4/0.0.0.0/tcp/9094 # expose the cluster api
+      CLUSTER_PINSVCAPI_HTTPLISTENMULTIADDRESS: /ip4/0.0.0.0/tcp/9098 # expose the pinning service api using 9098, so we can use nginx to proxy to it
+      CLUSTER_CRDT_TRUSTEDPEERS: '*'
       CLUSTER_SECRET: ${SECRET}
       CLUSTER_PEERADDRESSES: ${PEERADDRESSES}
-      CLUSTER_PINSVCAPI_BASICAUTHCREDENTIALS: ${BASICAUTHCREDENTIALS}
     volumes:
       - ./data/ipfs-cluster:/data/ipfs-cluster
     command: ["ipfs-cluster-service", "init"] #, "./init.service.json"]
