--- a/packages/ipfs-cluster-peer/docker-compose.yml
+++ b/packages/ipfs-cluster-peer/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - "9096:9096"     # Cluster swarm endpoint
     volumes:
       - ./data/ipfs-cluster:/data/ipfs-cluster
+      - ./identity.json:/data/ipfs-cluster/identity.json
 
   pinsvcapi-proxy:
     image: nginx:alpine
