--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ipfs-pinner-gateway",
+  "name": "ipfs-upload-server",
   "version": "1.0.0",
   "type": "module",
   "engines": {
@@ -13,7 +13,9 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "docs": "apidoc -i src/ -o docs/",
+    "prebuild": "npm run clean && npm run docs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
@@ -33,11 +35,18 @@
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "apidoc": "^1.2.0",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
+  },
+  "apidoc": {
+    "title": "IPFS Upload API Documentation",
+    "description": "API for uploading files, text, and JSON to IPFS",
+    "version": "1.0.0",
+    "url": "http://localhost:3001"
   }
 }
