--- a/packages/ipfs-cluster-peer/package.json
+++ b/packages/ipfs-cluster-peer/package.json
@@ -7,7 +7,9 @@
     "setup.sh",
     "docker-compose.yml",
     "init.docker-compose.yml",
-    "init.service.json"
+    "init.service.json",
+    "docker-compose.secure-upload.yml",
+    "nginx.conf"
   ],
   "keywords": [
     "ipfs",
