fix for cert location

--- a/packages/ipfs-cluster-peer/nginx.prod.conf
+++ b/packages/ipfs-cluster-peer/nginx.prod.conf
@@ -20,8 +20,8 @@ http {
         listen 443 ssl;
         server_name gateway.${DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
 
         location / {
             proxy_pass http://ipfs:8080;
@@ -44,8 +44,8 @@ http {
         listen 443 ssl;
         server_name upload.${DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
 
         location /api/v0/add {
             auth_basic "IPFS Upload";
