clean to dev and prod mode

--- a/packages/ipfs-cluster-peer/docker-compose.prod.yml
+++ b/packages/ipfs-cluster-peer/docker-compose.prod.yml
@@ -3,21 +3,15 @@ services:
   ipfs:
     ports:
       - "4001:4001"  # swarm
-      - "5001:5001"  # api (consider restricting in prod)
-  cluster:
-    ports:
-      - "9096:9096"  # swarm
+      - "5001:5001"  # api
   nginx:
-    image: nginx:alpine
-    command: /bin/sh -c "envsubst '$$DOMAIN' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     ports:
       - "80:80"
       - "443:443"
-      - "5555:5555"  # optional secure upload
+      - "5555:5555"
     volumes:
-      - ./nginx.prod.conf:/etc/nginx/nginx.conf.template:ro
+      - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
       - ./htpasswd:/etc/nginx/.htpasswd:ro
       - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
     environment:
       - DOMAIN=${DOMAIN} 
