--- a/packages/ipfs-cluster-peer/nginx.prod.conf
+++ b/packages/ipfs-cluster-peer/nginx.prod.conf
@@ -3,6 +3,14 @@ events {
 }
 
 http {
+    # Get DOMAIN from environment
+    env DOMAIN;
+
+    # Create nginx variable from env
+    map $env_DOMAIN $domain {
+        default $env_DOMAIN;
+    }
+
     # Basic settings
     sendfile on;
     tcp_nopush on;
@@ -18,10 +26,10 @@ http {
     # HTTPS Gateway
     server {
         listen 443 ssl;
-        server_name gateway.${DOMAIN};
+        server_name gateway.$domain;
 
-        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.$domain/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.$domain/privkey.pem;
 
         location / {
             proxy_pass http://ipfs:8080;
@@ -32,20 +40,20 @@ http {
         }
     }
 
-    # HTTP -> HTTPS redirect for gateway
+    # HTTP -> HTTPS redirect
     server {
         listen 80;
-        server_name gateway.${DOMAIN} upload.${DOMAIN};
+        server_name gateway.$domain upload.$domain;
         return 301 https://$host$request_uri;
     }
 
-    # Secure Upload (optional)
+    # Secure Upload
     server {
         listen 443 ssl;
-        server_name upload.${DOMAIN};
+        server_name upload.$domain;
 
-        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.$domain/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.$domain/privkey.pem;
 
         location /api/v0/add {
             auth_basic "IPFS Upload";
