--- a/packages/ipfs-cluster-peer/nginx.prod.conf
+++ b/packages/ipfs-cluster-peer/nginx.prod.conf
@@ -1,16 +1,8 @@
-# Get DOMAIN from environment
-env DOMAIN;
-
 events {
     worker_connections 1024;
 }
 
 http {
-    # Create nginx variable from env
-    map $env_DOMAIN $domain {
-        default $env_DOMAIN;
-    }
-
     # Basic settings
     sendfile on;
     tcp_nopush on;
@@ -26,10 +18,10 @@ http {
     # HTTPS Gateway
     server {
         listen 443 ssl;
-        server_name gateway.$domain;
+        server_name gateway.${DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/gateway.$domain/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.$domain/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
 
         location / {
             proxy_pass http://ipfs:8080;
@@ -43,17 +35,17 @@ http {
     # HTTP -> HTTPS redirect
     server {
         listen 80;
-        server_name gateway.$domain upload.$domain;
+        server_name gateway.$hostname upload.$hostname;
         return 301 https://$host$request_uri;
     }
 
     # Secure Upload
     server {
         listen 443 ssl;
-        server_name upload.$domain;
+        server_name upload.$hostname;
 
-        ssl_certificate /etc/letsencrypt/live/gateway.$domain/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.$domain/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.$hostname/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.$hostname/privkey.pem;
 
         location /api/v0/add {
             auth_basic "IPFS Upload";
