--- a/packages/ipfs-cluster-peer/docker-compose.prod.yml
+++ b/packages/ipfs-cluster-peer/docker-compose.prod.yml
@@ -9,8 +9,9 @@ services:
       - "80:80"
       - "443:443"
       - "5555:5555"
+    command: /bin/sh -c "envsubst '$$DOMAIN' < /etc/nginx/nginx.conf.template > /tmp/nginx.conf && nginx -g 'daemon off;' -c /tmp/nginx.conf"
     volumes:
-      - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.prod.conf:/etc/nginx/nginx.conf.template:ro
       - ./htpasswd:/etc/nginx/.htpasswd:ro
       - ./data/certbot/conf:/etc/letsencrypt
     environment:
