more fixes and logs

--- a/packages/ipfs-cluster-peer/nginx.prod.conf
+++ b/packages/ipfs-cluster-peer/nginx.prod.conf
@@ -35,17 +35,17 @@ http {
     # HTTP -> HTTPS redirect
     server {
         listen 80;
-        server_name gateway.$hostname upload.$hostname;
+        server_name gateway.${DOMAIN} upload.${DOMAIN};
         return 301 https://$host$request_uri;
     }
 
     # Secure Upload
     server {
         listen 443 ssl;
-        server_name upload.$hostname;
+        server_name upload.${DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/gateway.$hostname/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.$hostname/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
 
         location /api/v0/add {
             auth_basic "IPFS Upload";
