even more logging

--- a/packages/ipfs-cluster-peer/nginx.prod.conf
+++ b/packages/ipfs-cluster-peer/nginx.prod.conf
@@ -9,6 +9,10 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
+    # Logging
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+
     # SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
