--- a/packages/ipfs-cluster-peer/package.json
+++ b/packages/ipfs-cluster-peer/package.json
@@ -5,15 +5,17 @@
   "description": "IPFS Cluster peer setup scripts and configuration",
   "files": [
     "setup.sh",
-    "docker-compose.yml",
-    "init.docker-compose.yml",
     "init.service.json",
-    "docker-compose.secure-upload.yml",
-    "nginx.conf"
+    "init.docker-compose.yml",
+    "docker-compose.yml",
+    "docker-compose.prod.yml",
+    "nginx.dev.conf",
+    "nginx.prod.conf",
+    "certbot.conf"
   ],
   "keywords": [
     "ipfs",
     "ipfs-cluster",
     "docker"
   ]
-} 
+}
