--- a/packages/ipfs-cluster-peer/nginx.dns.conf
+++ b/packages/ipfs-cluster-peer/nginx.dns.conf
@@ -19,13 +19,13 @@ http {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # HTTPS Gateway
+    # HTTPS Gateway (if enabled)
     server {
         listen 443 ssl;
-        server_name gateway.${DOMAIN};
+        server_name ${GATEWAY_DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/${GATEWAY_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${GATEWAY_DOMAIN}/privkey.pem;
 
         location / {
             proxy_pass http://ipfs:8080;
@@ -39,17 +39,17 @@ http {
     # HTTP -> HTTPS redirect
     server {
         listen 80;
-        server_name gateway.${DOMAIN} upload.${DOMAIN};
+        server_name ${GATEWAY_DOMAIN} ${UPLOAD_DOMAIN};
         return 301 https://$host$request_uri;
     }
 
-    # Secure Upload
+    # Secure Upload (if enabled)
     server {
         listen 443 ssl;
-        server_name upload.${DOMAIN};
+        server_name ${UPLOAD_DOMAIN};
 
-        ssl_certificate /etc/letsencrypt/live/gateway.${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gateway.${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/${UPLOAD_DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${UPLOAD_DOMAIN}/privkey.pem;
 
         location /api/v0/add {
             auth_basic "IPFS Upload";
