--- a/packages/bgipfs-cli/package.json
+++ b/packages/bgipfs-cli/package.json
@@ -11,6 +11,9 @@
     "commands",
     "templates"
   ],
+  "hostedFiles": [
+    "install.sh"
+  ],
   "scripts": {
     "postinstall": "chmod +x ./bin/bgipfs"
   },
