fix: app + install.sh

--- a/packages/bgipfs-cli/package.json
+++ b/packages/bgipfs-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buidlguidl/bgipfs-cli",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "description": "BuidlGuidl IPFS Cluster Management Tool",
   "bin": {
     "bgipfs": "./bin/bgipfs"
