--- a/packages/bgipfs/.gitignore
+++ b/packages/bgipfs/.gitignore
@@ -12,3 +12,13 @@ yarn.lock
 package-lock.json
 
 
+# Local testing files
+/docker-compose.yml
+/init.docker-compose.yml
+/docker-compose.dns.yml
+/nginx.ip.conf
+/nginx.dns.conf
+/certbot.conf
+/init.service.json
+/docker-compose.override.yml
+/service.json
