--- a/packages/bgipfs/package.json
+++ b/packages/bgipfs/package.json
@@ -10,7 +10,12 @@
   "dependencies": {
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^5"
+    "@oclif/plugin-plugins": "^5",
+    "chalk": "^5.3.0",
+    "dotenv": "^16.4.1",
+    "zod": "^3.22.4",
+    "execa": "^8.0.1",
+    "@inquirer/prompts": "^3.3.0"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
@@ -30,11 +35,12 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "files": [
     "/bin",
     "/dist",
+    "/templates",
     "/oclif.manifest.json"
   ],
   "homepage": "https://github.com/azf20/buidlguidl-ipfs",
@@ -56,7 +62,13 @@
     "topics": {
       "hello": {
         "description": "Say hello to the world and others"
+      },
+      "install": {
+        "description": "Install dependencies and components"
       }
+    },
+    "hooks": {
+      "init-cleanup": "./dist/hooks/init-cleanup.js"
     }
   },
   "repository": "azf20/buidlguidl-ipfs",
