renamings and tidy up

--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@buidlguidl/ipfs-uploader",
+  "name": "ipfs-uploader",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
