--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
-    "@buidlguidl/ipfs-uploader": "workspace:*",
+    "ipfs-uploader": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
