expose pin/ls and cat

--- a/packages/bgipfs/templates/nginx.dns.conf
+++ b/packages/bgipfs/templates/nginx.dns.conf
@@ -51,7 +51,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/${UPLOAD_DOMAIN}/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/${UPLOAD_DOMAIN}/privkey.pem;
 
-        location /api/v0/add {
+        location ~ ^/api/v0/(add|cat|pin/ls) {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
