--- a/packages/bgipfs/package.json
+++ b/packages/bgipfs/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.1",
     "execa": "^8.0.1",
     "ipfs-uploader": "workspace:*",
+    "it-all": "^3.0.6",
     "kubo-rpc-client": "^5.0.2",
     "zod": "^3.22.4"
   },
