consolidation, devex, s3 directories

--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -18,11 +18,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
+    "@helia/car": "^4.0.2",
     "@helia/mfs": "^4.0.2",
     "@helia/unixfs": "^1.0.0",
     "@ipld/car": "^5.4.0",
     "blockstore-core": "^5.0.2",
     "datastore-core": "^10.0.2",
+    "helia": "^5.1.1",
+    "it-all": "^3.0.6",
     "kubo-rpc-client": "^5.0.2",
     "multiformats": "^13.3.1"
   },
