--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -24,6 +24,7 @@
     "@ipld/car": "^5.4.0",
     "blockstore-core": "^5.0.2",
     "datastore-core": "^10.0.2",
+    "form-data": "^4.0.1",
     "helia": "^5.1.1",
     "it-all": "^3.0.6",
     "kubo-rpc-client": "^5.0.2",
