feat: multi-upload, syncing, cli uploads (#8)
* fix: optional file check

* config not init

* multi topic

* expose pin/ls and cat

* prebuild

* catch for service unlink

* simple sync

* use basecommand

* multiuploading

* s3, multi

* consolidation, devex, s3 directories

* pinata directories, remove files

* documentation

--- a/packages/bgipfs/templates/nginx.ip.conf
+++ b/packages/bgipfs/templates/nginx.ip.conf
@@ -15,7 +15,7 @@ http {
         listen 5555;
         server_name localhost;
 
-        location /api/v0/add {
+        location ~ ^/api/v0/(add|cat|pin/ls|pin/add) {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
