--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -17,6 +17,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@helia/car": "^4.0.2",
+    "@helia/mfs": "^4.0.2",
+    "@helia/unixfs": "^1.0.0",
+    "@ipld/car": "^5.4.0",
+    "blockstore-core": "^5.0.2",
+    "datastore-core": "^10.0.2",
+    "form-data": "^4.0.1",
+    "helia": "^5.1.1",
+    "it-all": "^3.0.6",
     "kubo-rpc-client": "^5.0.2",
     "multiformats": "^13.3.1"
   },
