--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -26,9 +26,13 @@ http {
 
         # Handle direct gateway access with redirect
         location ~ ^/ipfs/([^/]+)(/.+)?$ {
-            set $path $2;
-            # Note: Using https:// in redirect since Cloudflare handles SSL
-            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
+            # Only redirect if not already on subdomain
+            if ($cid = '') {
+                set $path $2;
+                return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
+            }
+            # If already on subdomain, pass through
+            proxy_pass http://ipfs:8080$request_uri;
         }
 
         # Handle subdomain access
@@ -49,10 +53,15 @@ http {
         listen 80;
         server_name ${UPLOAD_DOMAIN};
 
-        location ~ ^/api/v0/(add|cat|pin/ls|pin/add) {
+        # Remove trailing slashes
+        rewrite ^/(.*)/$ /$1 permanent;
+
+        location ~ ^/api/v0/(add|cat|pin/ls|pin/add)/?$ {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
+            # Remove trailing slash before proxying
+            rewrite ^/(.*)/$ /$1 break;
             proxy_pass http://cluster:9095;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
