--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -13,34 +13,13 @@ http {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
-    # Gateway with subdomain support (behind Cloudflare proxy)
+    # Gateway proxy
     server {
         listen 80;
         server_name ${GATEWAY_DOMAIN} *.ipfs.${GATEWAY_DOMAIN};
 
-        # Extract CID from subdomain if present
-        set $cid '';
-        if ($host ~ "^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$") {
-            set $cid $1;
-        }
-
-        # Handle direct gateway access with redirect
-        location ~ ^/ipfs/([^/]+)(/.+)?$ {
-            # Only redirect if not already on subdomain
-            if ($cid = '') {
-                set $path $2;
-                return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
-            }
-            # If already on subdomain, pass through
-            proxy_pass http://ipfs:8080$request_uri;
-        }
-
-        # Handle subdomain access
         location / {
-            if ($cid != '') {
-                proxy_pass http://ipfs:8080/ipfs/$cid$request_uri;
-            }
-            proxy_pass http://ipfs:8080$request_uri;
+            proxy_pass http://ipfs:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -48,20 +27,16 @@ http {
         }
     }
 
-    # Upload endpoint (behind Cloudflare proxy)
+    # Upload endpoint
     server {
         listen 80;
         server_name ${UPLOAD_DOMAIN};
 
-        # Remove trailing slashes
-        rewrite ^/(.*)/$ /$1 permanent;
-
-        location ~ ^/api/v0/(add|cat|pin/ls|pin/add)/?$ {
+        # Only allow specific API endpoints
+        location ~ ^/api/v0/(add|cat|pin/ls|pin/add)(/)?$ {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
-            # Remove trailing slash before proxying
-            rewrite ^/(.*)/$ /$1 break;
             proxy_pass http://cluster:9095;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
