--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -42,6 +42,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Prevent caching
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
+            add_header Pragma "no-cache";
+            proxy_buffering off;
         }
 
         location / {
