--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -9,9 +9,12 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
-    # Logging
-    access_log /dev/stdout;
-    error_log /dev/stderr;
+    # More detailed logging format
+    log_format detailed '$remote_addr - $remote_user [$time_local] '
+                       '"$request" $status $body_bytes_sent '
+                       '"$http_referer" "$http_user_agent" '
+                       'upstream: "$upstream_addr" "$upstream_status"';
+    access_log /dev/stdout detailed;
 
     # Gateway proxy
     server {
@@ -38,7 +41,8 @@ http {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
-            proxy_pass http://cluster:9095;
+            # Try with explicit URI
+            proxy_pass http://cluster:9095$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
