--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -9,7 +9,7 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
-    # More detailed logging format
+    # Logging
     log_format detailed '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status $body_bytes_sent '
                        '"$http_referer" "$http_user_agent" '
@@ -41,8 +41,7 @@ http {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
-            # Try with explicit URI
-            proxy_pass http://cluster:9095$request_uri;
+            proxy_pass http://cluster:9095;  # Simplified
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
