--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -10,11 +10,8 @@ http {
     keepalive_timeout 65;
 
     # Logging
-    log_format detailed '$remote_addr - $remote_user [$time_local] '
-                       '"$request" $status $body_bytes_sent '
-                       '"$http_referer" "$http_user_agent" '
-                       'upstream: "$upstream_addr" "$upstream_status"';
-    access_log /dev/stdout detailed;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
 
     # Gateway proxy
     server {
@@ -41,17 +38,12 @@ http {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
             
-            proxy_pass http://cluster:9095;  # Simplified
+            proxy_pass http://cluster:9095;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
-
-            # Prevent caching
-            add_header Cache-Control "no-store, no-cache, must-revalidate";
-            add_header Pragma "no-cache";
-            proxy_buffering off;
         }
 
         location / {
