--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -18,8 +18,27 @@ http {
         listen 80;
         server_name ${GATEWAY_DOMAIN} *.ipfs.${GATEWAY_DOMAIN};
 
+        # Extract CID from subdomain if present
+        set $cid '';
+        if ($host ~ "^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$") {
+            set $cid $1;
+        }
+
+        # Handle direct gateway access with redirect
+        location ~ ^/ipfs/([^/]+)(/.+)?$ {
+            set $path $2;
+            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
+        }
+
+        # Handle subdomain access
         location / {
-            proxy_pass http://ipfs:8080;
+            if ($cid != '') {
+                # On subdomain, always proxy with CID
+                proxy_pass http://ipfs:8080/ipfs/$cid$request_uri;
+            } else {
+                # On main domain, proxy to IPFS root
+                proxy_pass http://ipfs:8080;
+            }
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
