redirect and ipns

--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -24,21 +24,37 @@ http {
             set $cid $1;
         }
 
-        # Handle direct gateway access with redirect
+        # Handle direct IPFS gateway access with redirect
         location ~ ^/ipfs/([^/]+)(/.+)?$ {
             set $path $2;
             return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
         }
 
+        # Handle IPNS paths
+        location ~ ^/ipns/(.+)$ {
+            proxy_pass http://ipfs:8080$request_uri;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+        }
+
         # Handle subdomain access
         location / {
-            if ($cid != '') {
-                # On subdomain, always proxy with CID
-                proxy_pass http://ipfs:8080/ipfs/$cid$request_uri;
-            } else {
-                # On main domain, proxy to IPFS root
-                proxy_pass http://ipfs:8080;
+            # Block unrecognized paths on main domain
+            if ($cid = '' and $request_uri !~ ^/$) {
+                return 404;
             }
+
+            set $upstream "http://ipfs:8080";
+            set $path "";
+
+            if ($cid != '') {
+                set $path "/ipfs/$cid";
+            }
+
+            proxy_pass $upstream$path$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
