--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -43,14 +43,14 @@ http {
         # Handle subdomain access
         location / {
             # Block unrecognized paths on main domain
-            if ($cid = '' and $request_uri !~ ^/$) {
+            if ($cid = "" and $request_uri !~ ^/$) {
                 return 404;
             }
 
             set $upstream "http://ipfs:8080";
             set $path "";
 
-            if ($cid != '') {
+            if ($cid != "") {
                 set $path "/ipfs/$cid";
             }
 
