--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -42,13 +42,15 @@ http {
 
         # Handle subdomain access
         location / {
-            # Block unrecognized paths on main domain
-            if ($cid = "" and $request_uri !~ ^/$) {
-                return 404;
-            }
-
             set $upstream "http://ipfs:8080";
             set $path "";
+
+            # Block unrecognized paths on main domain
+            if ($cid = "") {
+                if ($request_uri !~ ^/$) {
+                    return 404;
+                }
+            }
 
             if ($cid != "") {
                 set $path "/ipfs/$cid";
