--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -13,16 +13,21 @@ http {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
+    # Map variables for path handling
+    map $host $cid {
+        "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$" $1;
+        default "";
+    }
+
+    map $request_uri $is_root_path {
+        "~^/$" 1;
+        default 0;
+    }
+
     # Gateway proxy
     server {
         listen 80;
         server_name ${GATEWAY_DOMAIN} *.ipfs.${GATEWAY_DOMAIN};
-
-        # Extract CID from subdomain if present
-        set $cid '';
-        if ($host ~ "^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$") {
-            set $cid $1;
-        }
 
         # Handle direct IPFS gateway access with redirect
         location ~ ^/ipfs/([^/]+)(/.+)?$ {
@@ -42,21 +47,12 @@ http {
 
         # Handle subdomain access
         location / {
-            set $upstream "http://ipfs:8080";
-            set $path "";
-
-            # Block unrecognized paths on main domain
-            if ($cid = "") {
-                if ($request_uri !~ ^/$) {
-                    return 404;
-                }
+            # Block non-root paths on main domain
+            if ($cid = "" and $is_root_path = 0) {
+                return 404;
             }
 
-            if ($cid != "") {
-                set $path "/ipfs/$cid";
-            }
-
-            proxy_pass $upstream$path$request_uri;
+            proxy_pass http://ipfs:8080$cid_path$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
