--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -24,6 +24,11 @@ http {
         default 0;
     }
 
+    map $cid $cid_path {
+        ""      "";
+        default "/ipfs/$cid";
+    }
+
     # Gateway proxy
     server {
         listen 80;
@@ -47,9 +52,11 @@ http {
 
         # Handle subdomain access
         location / {
-            # Block non-root paths on main domain
-            if ($cid = "" and $is_root_path = 0) {
-                return 404;
+            if ($is_root_path = 0) {
+                set $test "${cid}${is_root_path}";
+                if ($test = "0") {
+                    return 404;
+                }
             }
 
             proxy_pass http://ipfs:8080$cid_path$request_uri;
