--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -13,58 +13,51 @@ http {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
-    # Map variables for path handling
-    map $host $cid {
-        "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$" $1;
-        default "";
-    }
-
-    map $request_uri $is_root_path {
-        "~^/$" 1;
-        default 0;
-    }
-
-    map $cid $cid_path {
-        ""      "";
-        default "/ipfs/$cid";
-    }
-
-    # Gateway proxy
+    # Main gateway server
     server {
         listen 80;
-        server_name ${GATEWAY_DOMAIN} *.ipfs.${GATEWAY_DOMAIN};
+        server_name ${GATEWAY_DOMAIN};
 
-        # Handle direct IPFS gateway access with redirect
+        # IPFS redirect
         location ~ ^/ipfs/([^/]+)(/.+)?$ {
-            set $path $2;
-            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$path$is_args$args;
+            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$2$is_args$args;
         }
 
-        # Handle IPNS paths
-        location ~ ^/ipns/(.+)$ {
-            proxy_pass http://ipfs:8080$request_uri;
+        # IPNS passthrough
+        location ~ ^/ipns/ {
+            proxy_pass http://ipfs:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
         }
 
-        # Handle subdomain access
+        # Root path only
+        location = / {
+            proxy_pass http://ipfs:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Block everything else
         location / {
-            if ($is_root_path = 0) {
-                set $test "${cid}${is_root_path}";
-                if ($test = "0") {
-                    return 404;
-                }
-            }
+            return 404;
+        }
+    }
 
-            proxy_pass http://ipfs:8080$cid_path$request_uri;
+    # Subdomain gateway server
+    server {
+        listen 80;
+        server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
+
+        location / {
+            proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
         }
     }
 
@@ -73,17 +66,14 @@ http {
         listen 80;
         server_name ${UPLOAD_DOMAIN};
 
-        # Only allow specific API endpoints
         location ~ ^/api/v0/(add|cat|pin/ls|pin/add)(/)?$ {
             auth_basic "IPFS Upload";
             auth_basic_user_file /etc/nginx/.htpasswd;
-            
             proxy_pass http://cluster:9095;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
         }
 
         location / {
