--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -53,7 +53,8 @@ http {
         server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
 
         location / {
-            proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
+            # Just use the request URI as-is
+            proxy_pass http://ipfs:8080$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
