--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -52,9 +52,15 @@ http {
         listen 80;
         server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
 
+        # Clean up URLs that contain /ipfs/CID
+        location ~ ^/ipfs/([^/]+)(.*)$ {
+            # Redirect to clean path
+            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$2;
+        }
+
         location / {
-            # Just use the request URI as-is
-            proxy_pass http://ipfs:8080$request_uri;
+            # Extract CID from subdomain and pass full path
+            proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
