--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -52,16 +52,10 @@ http {
         listen 80;
         server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
 
-        # Clean up URLs that contain /ipfs/CID
-        location ~ ^/ipfs/([^/]+)(.*)$ {
-            # Redirect to clean path
-            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$2;
-        }
-
         location / {
-            # Extract CID from subdomain and pass full path
+            # Use the CID from subdomain but let IPFS handle paths
             proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
-            proxy_set_header Host $host;
+            proxy_set_header Host $1.ipfs.${GATEWAY_DOMAIN};  # For directory listings
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
