--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -53,9 +53,9 @@ http {
         server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
 
         location / {
-            # Use the CID from subdomain but let IPFS handle paths
-            proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
-            proxy_set_header Host $1.ipfs.${GATEWAY_DOMAIN};  # For directory listings
+            # Pass to Kubo using CID subdomain format
+            proxy_pass http://$1.ipfs:8080$request_uri;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
