--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -9,6 +9,9 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
+    # Add Docker DNS resolver
+    resolver 127.0.0.11 valid=30s;
+
     # Logging
     access_log /dev/stdout;
     error_log /dev/stderr;
