--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -56,9 +56,9 @@ http {
         server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
 
         location / {
-            # Pass to Kubo using CID subdomain format
-            proxy_pass http://$1.ipfs:8080$request_uri;
-            proxy_set_header Host $host;
+            # Pass to IPFS gateway with subdomain-style Host header
+            proxy_pass http://ipfs:8080;
+            proxy_set_header Host "$1.ipfs.localhost:8080";
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
